admin > login 및 layout 구현

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +5,68 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.head {
+    text-align: right;
+}
+
+.common {
+    display: flex;
+}
+
+.common .menu {
+    width: 350px;
+    height: 834px;
+    padding: 2%;
+    background-color: #151626;
+    text-align: center;
+}
+
+.common .menu img {
+    width: 200px;
+    height: 100px;
+
+}
+
+.common .menu .menu-box {
+    border-radius: 20px;
+    background-color: #4AD9A4;
+}
+
+.common .menu .menu-list {
+    font-size: x-large;
+    padding: 5%;
+}
+
+.common .contents {
+    width: 80%;
+    padding: 1.5%;
+}
+
+.common .contents .header {
+    text-align: right;
+    width: 100%;
+    display: ruby-text;
+}
+
+.common .contents .header div {
+    padding-left: 1%;
+}
+
+.common .contents .header .name {
+    font-weight: bolder;
+    font-size: large;
+}
+
+.common .contents .header .info {
+    padding-left: 0px;
+}
+
+.common .contents .header .login-date {
+    color: gray;
+}
+
+.common .contents .content {
+    width: 100%;
 }
